--- a/1problem/2021-10/10-08-lc187重复的DNA序列.md
+++ b/1problem/2021-10/10-08-lc187重复的DNA序列.md
@@ -14,44 +14,61 @@
 ### 代码
 
 ```cpp
-// Leetcode 题解区搜索 fengwei2002
-// https://github.com/fengwei2002/algorithm
-
 typedef unsigned long long ULL;
-const int N = 1e5 + 10, P = 13331; // 进制：131 13331 131313
+const int N = 1e5 + 10, P = 131;
 
 class Solution {
    private:
     ULL h[N], p[N];
-
+    
    public:
     vector<string> findRepeatedDnaSequences(string s) {
         vector<string> ans;
+
         memset(h, 0, sizeof h);
         memset(p, 0, sizeof p);
 
-        // 初始化字符串哈希
+        // 字符串哈希初始化
         p[0] = 1;
         for (int i = 1; i <= s.size(); i++) {
             h[i] = h[i - 1] * P + s[i - 1];
             p[i] = p[i - 1] * P;
         }
 
-        // 枚举所有长度为 10 的子串
-        unordered_map<int, int> cnt;
-        for (int i = 1; i + 10 - 1 <= s.size(); i++) { 
+        unordered_map<ULL, int> cnt;
+        // 对于所有长度为 10 的子串，注意边界
+        for (int i = 1; i + 10 - 1 <= s.size(); i++) {
             int j = i + 10 - 1;
-            
-            int hash = h[j] - h[i - 1] * p[j - i + 1];
+            ULL hash = h[j] - h[i - 1] * p[j - i + 1];
             cnt[hash]++;
 
-            if(cnt[hash] == 2){
+            if (cnt[hash] == 2) {
                 ans.push_back(s.substr(j - 10, 10));
                 cnt[hash]++;
             }
         }
 
         return ans;
+    }
+};
+```
+
+另外长度为 10 并不长，可以直接哈希表，所以有
+
+``` cpp
+class Solution {
+   public:
+    vector<string> findRepeatedDnaSequences(string s) {
+        vector<string> ans;
+
+        unordered_map<string, int> S;
+        for (int i = 0; i + 10 <= s.size(); i++) {
+            string str = s.substr(i, 10);
+            if (S[str] == 1) ans.push_back(str);
+            S[str]++;
+        }
+
+        return res;
     }
 };
 ```
